--- a/INSTALL
+++ b/INSTALL
@@ -13,7 +13,7 @@ INSTALL
   c. pip install mysqlclient
   d. pip install requests
 6. изменяем пароли в файле passwords.py
-7. загружаем базу данных shops.sql в mysql
+7. загружаем базу данных shops.sql в mysql - mysql -u USER -pPASSWORD shops < /path/to/shops.sql
 8. проверяем запуск  - python3.6 parsing_nagios.py
 9. проверяем запуск  - python3.6 testing_ips.py
 10. добавляем необходимые данные cron 
