--- a/INSTALL
+++ b/INSTALL
@@ -16,8 +16,11 @@ INSTALL
 7. загружаем базу данных shops.sql в mysql - mysql -u USER -pPASSWORD shops < /path/to/shops.sql
 8. проверяем запуск  - python3.6 parsing_nagios.py
 9. проверяем запуск  - python3.6 testing_ips.py
-10. добавляем необходимые данные cron 
+10. создаем папку log - mkdir log
+11. добавляем необходимые данные cron 
 */1 * * * *     isp_test    source /var/scripts/git/testing_isp/env/bin/activate && /var/scripts/git/testing_isp/env/bin/python3.6 /var/scripts/git/testing_isp/parsing_nagios.py >> /var/scripts/git/testing_isp/log/parsing.log 2>> /var/scripts/git/testing_isp/log/parsing_error.log
 */5 * * * *     isp_test    source /var/scripts/git/testing_isp/env/bin/activate && /var/scripts/git/testing_isp/env/bin/python3.6 /var/scripts/git/testing_isp/testing_providers.py >> /var/scripts/git/testing_isp/log/testing_providers.log 2>> /var/scripts/git/testing_isp/log/testing_providers_error.log
 
 
+Все логи будут складываться в папку log
+Парсим различные ошибки через *. например: grep "*" parsing.log
