--- a/INSTALL
+++ b/INSTALL
@@ -8,10 +8,12 @@ INSTALL
 3. создаем новое виртуальное окружения ( python3.6 -m venv env )
 4. активируем его ( source env/bin/activate )
 5. устанавливаем дополнительные пакеты:
-  a. pip install pexpect
-  b. pip install xlrd
-  c. pip install mysqlclient
-  d. pip install requests
+  pip install pexpect
+  pip install xlrd
+  yum install mysql-server
+  yum install mariadb-devel gcc python36u-devel
+  pip install mysqlclient
+  pip install requests
 6. изменяем пароли в файле passwords.py
 7. загружаем базу данных shops.sql в mysql - mysql -u USER -pPASSWORD shops < /path/to/shops.sql
 8. проверяем запуск  - python3.6 parsing_nagios.py
