--- a/INSTALL
+++ b/INSTALL
@@ -6,6 +6,7 @@ sudo apt-get install python3.6-dev libmysqlclient-dev
 Необходимые пакеты для Centos/redhat
 yum -y install https://centos7.iuscommunity.org/ius-release.rpm
 yum -y install python36u
+yum -y install python36u-pip
 Если mysql yum install mysql-server mysql-devel
 Если mariaDB - yum install mariadb-devel python36u-devel
 
